src/objects/Option_Fee__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Kit_Price__c</fullName>
        <label>Actual Kit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicable_Tax__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicable Tax</label>
        <referenceTo>Sales_Tax__c</referenceTo>
        <relationshipLabel>Options &amp; Fees (Applicable Tax)</relationshipLabel>
        <relationshipName>Options_Fees1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CO_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CO Line Item</label>
        <referenceTo>CO_Line_Item__c</referenceTo>
        <relationshipLabel>Options &amp; Fees</relationshipLabel>
        <relationshipName>Options_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to deal item</description>
        <label>Deal Item</label>
        <referenceTo>Deal_Item__c</referenceTo>
        <relationshipLabel>Options &amp; Fees</relationshipLabel>
        <relationshipName>Options_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
	 <fields>
        <fullName>Cost__c</fullName>
        <description>For committed, fulfilled or invoiced items this cost field will be used, for uncommitted options this field is of no use calculated cost is used</description>
        <formula>IF(CO_Line_Item__c != null, 
  if(CO_Line_Item__r.Invoice_Number__c != null, Per_Item_Cost__c, CO_Line_Item__r.Price__c), 
  if(Service_Order_Line_Item__c != null, 
    if(Service_Order_Line_Item__r.Service_Order_Header__r.Invoice_Number__c != null, 
      Per_Item_Cost__c, Service_Order_Line_Item__r.Kit_Price__c),  IF( ISPICKVAL(Status__c, &apos;Fulfilled&apos;), Per_Item_Cost__c, 0) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Kit_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Kit Header</label>
        <referenceTo>Deal_Kit_Header__c</referenceTo>
        <relationshipLabel>Options &amp; Fees</relationshipLabel>
        <relationshipName>Options_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Not in use</description>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>Options &amp; Fees</relationshipLabel>
        <relationshipName>Options_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Do_Not_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to Fee</description>
        <label>Fee</label>
        <referenceTo>Fee__c</referenceTo>
        <relationshipLabel>Options &amp; Fees</relationshipLabel>
        <relationshipName>Options_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fixed_Price__c</fullName>
        <label>Fixed Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Install__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Not in use</description>
        <label>Install</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Environmental_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Environmental Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Fixed_Kit_Line_Item_CO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Fixed Kit Line Item CO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Fixed_Price_Kit__c</fullName>
        <formula>Deal_Kit_Header__r.Is_Fixed_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Fixed Price Kit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Fixed_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Fixed Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Install__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Install</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Linked_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Linked Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Code__c</fullName>
        <label>Item Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <label>Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kit_Header_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kit Header Line Item</label>
        <referenceTo>Kit_Header_Line_Item__c</referenceTo>
        <relationshipLabel>Options &amp; Fees</relationshipLabel>
        <relationshipName>Options_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Labour_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to Labour Code</description>
        <label>Labour Code</label>
        <referenceTo>Labour_Code__c</referenceTo>
        <relationshipLabel>Options &amp; Fees</relationshipLabel>
        <relationshipName>Options_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_Fee_Kit_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Option &amp; Fee Kit Header</label>
        <referenceTo>Option_Fee_Kit_header__c</referenceTo>
        <relationshipLabel>Options &amp; Fees</relationshipLabel>
        <relationshipName>Options_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to part</description>
        <label>Part</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Options &amp; Fees</relationshipLabel>
        <relationshipName>Options_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Per_Item_Cost__c</fullName>
        <label>Per_Item_Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Per_Item_Profit__c</fullName>
        <formula>IF(AND(Fee__c != null, NOT(Fee__r.Is_Include_In_Profit_Calculation__c)),
            0,
            Revenue__c - 
            Qty__c * 
                (IF(OR(Part__c != null, Labour_Code__c != null, ISPICKVAL(Product__r.Type__c , &apos;Sublet&apos;)),
                    Per_Item_Cost__c, 
                    IF(
                        Product__c != null,
                        IF(ISPICKVAL(Product__r.Cost_Method__c, &apos;Fixed Cost&apos;), Product__r.Cost__c, ((Price__c * Product__r.Cost__c) / 100)),
                        0
                    )
                )
            )
        )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Per Item Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Option_Fee_Sales__c</fullName>
        <formula>IF(
Fee__c != null,
Revenue__c,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre Tax Option Fee Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Option_Labor_Sales__c</fullName>
        <formula>IF(
Labour_Code__c != null,
Revenue__c,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre Tax Option Labor Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Option_Other_Product_Sales__c</fullName>
        <formula>IF(
AND(Product__c != null,!ISPICKVAL(Product__r.Type__c, &apos;Sublet&apos;),!ISPICKVAL(Product__r.Type__c, &apos;Warranty Plan&apos;)),
Revenue__c,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre Tax Option Other Product Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Option_Part_Sales__c</fullName>
        <formula>IF(
Part__c != null,
Revenue__c,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre Tax Option Part Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Option_Sublet_Sales__c</fullName>
        <formula>IF(
 AND(Product__c != null,ISPICKVAL(Product__r.Type__c, &apos;Sublet&apos;)),
Revenue__c,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre Tax Option Sublet Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Option_Warranty_Sales__c</fullName>
        <formula>IF(
 AND(Product__c != null,ISPICKVAL(Product__r.Type__c, &apos;Warranty Plan&apos;)),
Revenue__c,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre Tax Option Warranty Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_When_Tax_Included__c</fullName>
        <label>Price When Tax Included</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>Price of this item</description>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Options &amp; Fees</relationshipLabel>
        <relationshipName>Options_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <description>Quantity</description>
        <label>Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retail__c</fullName>
        <description>Retail</description>
        <label>Retail</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <formula>Price__c * Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Percentage__c</fullName>
        <description>Sales tax percentage</description>
        <label>Sales Tax Percentage</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Not in use</description>
        <label>Sales Tax</label>
        <referenceTo>Sales_Tax__c</referenceTo>
        <relationshipLabel>Options &amp; Fees</relationshipLabel>
        <relationshipName>Options_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Order_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order Line Item</label>
        <referenceTo>Service_Order_Line_Item__c</referenceTo>
        <relationshipLabel>Options &amp; Fees</relationshipLabel>
        <relationshipName>Options_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Uncommitted</fullName>
                </value>
                <value>
                    <fullName>Committed</fullName>
                </value>
                <value>
                    <fullName>Fulfilled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <formula>(Qty__c * Price__c * Sales_Tax_Percentage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>Cost__c *  Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price_With_Tax__c</fullName>
        <formula>Revenue__c +  Tax_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price With Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Profit__c</fullName>
        <formula>
            if((NOT(ISBLANK(Fee__c)) &amp;&amp; Fee__r.Is_Include_In_Profit_Calculation__c &amp;&amp; NOT(ISBLANK(Revenue__c ))), Revenue__c,
            if(NOT(ISBLANK(Revenue__c - Total_Cost__c)) &amp;&amp; ISBLANK(Fee__c),
            (Revenue__c - Total_Cost__c),
            0)
            )
        </formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <description>Unique identifier to map on UI.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique identifier to map on UI.</inlineHelpText>
        <label>UUID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Option_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <label>Option &amp; Fee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OF-{000000}</displayFormat>
        <label>Option &amp; Fee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Options &amp; Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>